--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="home" class="home hidden-content">
           <div class="main">
             <h1>EZEQUIEL SILVA</h1>
-            <h2><strong>Desenvolvedor Front-end</strong></h2>
+            <h2>Desenvolvedor Front-end</h2>
             <p>
               Olá, seja bem-vindo! Sou desenvolvedor front-end tenho 23 anos,
               especializado na criação de sites e templates para web. Estou
